# gridone

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  bacnet.py  codecov.yml  load_driver.py  main.py  prek.toml  pyproject.toml  seed_commands.py  supervisord.conf
.claude/: plan.md
.githooks/: pre-push.sh  setup.sh
.github/: dependabot.yml
.github/actions/acceptance-suite/: action.yml
.github/workflows/: acceptance.yaml  branch-lint.yml  bump.yml  ci_core.yml  commitlint.yml  coverage_report.yaml  docs.yml  pr-title.yml  release.yml  sdk-ci.yaml  ui-ci.yaml
apps/api_server/: README.md  generate_openapi.py  logging_config.py  main.py  pyproject.toml  telemetry.py
apps/api_server/tests/: conftest.py  test_logging_config.py  test_telemetry.py
apps/cli/: README.md  app.py  devices.py  main.py  pyproject.toml  repository.py
apps/cli/src/cli/: app.py  config.py  devices.py  drivers.py  formatters.py  repository.py  service.py
apps/cli/tests/: conftest.py  test_devices.py  test_hello.py
apps/cli/tests/fixtures/: mock_core_file_storage.py
apps/migrations/: pyproject.toml
apps/migrations/src/migrations/: __init__.py  __main__.py
apps/ui/: .env.example  README.md  components.json  eslint.config.mts  index.css  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/ui/scripts/: check-translations.ts
apps/ui/src/: App.tsx  i18n.ts  index.css  main.tsx
core/: attribute.py  device.py  driver.py  types.py
core/device_schema/: __init__.py  attribute_schema.py  base.py  value_parser.py
core/driver/: driver.py
core/driver/driver_schema/: attribute_schema.py  driver_schema.py
core/transports/: __init__.py  base.py  errors.py  factory.py  http.py  read_handler.py  read_handler_registry.py  transport_address.py
core/transports/bacnet_transport/: README.md  bacnet_address.py  client.py  transport_config.py
core/transports/http_transport/: __init__.py  client.py  http_address.py
core/transports/modbus_tcp_transport/: __init__.py  client.py  modbus_address.py  transport_config.py
core/transports/mqtt_transport/: client.py  mqtt_address.py  topic_handler_registry.py  transport_config.py
core/utils/: ip.py  proxy.py
core/utils/templating/: render.py
core/value_parsers/: __init__.py  factory.py  json_path_parser.py  json_pointer_parser.py  scale_parser.py  value_parser.py
core/value_parsers/registry/: identity_parser.py  json_path_parser.py
docker/: Dockerfile  README.md  nginx.conf  nginx.conf.template
docs/: .gitignore  README.md  mkdocs.yml  pyproject.toml
docs/src/: guide.md  index.md
docs/src/getting-started/: developers.md  index.md  integrators.md  operators.md
docs/src/guide/: codecs.md  devices.md  general-layout.md  standard-devices.md  transport-addresses.md  transports.md  value-adapters.md
docs/src/overrides/: home.html
docs/src/reference/: devices.md  glossary.md  standard-devices.md  transports.md
docs/src/stylesheets/: extra.css
requests/: bruno.json  collection.bru  hooks.bru
requests/apps/: disable.bru  enable.bru  get-config-schema.bru  get-config.bru  get.bru  list.bru  update-config.bru
requests/apps/registrations/: accept.bru  create.bru  discard.bru  get.bru  list.bru
requests/assets/: create.bru  delete.bru  dispatch-command.bru  get-tree-with-devices.bru  get-tree.bru  get.bru  list-devices.bru  list.bru  reorder-children.bru  schema.bru  update-profile.bru  update.bru
requests/assets/profile/: get.bru  schema.bru  update.bru
requests/auth/: login.bru  logout.bru  me.bru  refresh.bru  schema.bru
requests/automations/: action-schemas.bru  create.bru  delete.bru  disable.bru  enable.bru  get.bru  list-executions.bru  list.bru  trigger-schemas.bru  update.bru
requests/dashboards/: add-widget.bru  create.bru  delete.bru  get.bru  list.bru  remove-widget.bru  update-layout.bru  update-widget.bru  update.bru
requests/dashboards/widgets/: add-widget.bru  remove-widget.bru  update-widget.bru  widget-schemas.bru
requests/devices/: create-batch.bru  create.bru  delete-tag.bru  delete.bru  get.bru  list.bru  set-tag.bru  standard-types.bru  update.bru
requests/devices/attribute-logs/: get.bru
requests/devices/attributes/: refresh.bru
requests/devices/commands/: dispatch-batch.bru  dispatch.bru  list-by-device.bru  list.bru
requests/devices/faults/: list.bru
requests/devices/timeseries/: aggregate-options.bru  export-csv.bru  export-png.bru  get-aggregation.bru  get-points.bru  list.bru  push-single.bru  push.bru
requests/drivers/: create.bru  delete.bru  get.bru  list.bru  update driver.bru  update.bru
requests/drivers/attributes/: create.bru  delete.bru  rename.bru  update.bru
requests/environments/: local.bru
requests/health/: get.bru
requests/notifications/: dismiss.bru  dispatch.bru  list.bru
requests/transports/: create.bru  delete.bru  get.bru  list.bru  schemas.bru  update.bru
requests/transports/discovery/: create.bru  delete.bru  list.bru
requests/users/: block.bru  create.bru  delete.bru  get.bru  list.bru  unblock.bru  update.bru
sdk/ts/: .env.example  README.md  eslint.config.mts  package-lock.json  package.json  tsconfig.json
sdk/ts/scripts/: smoke.ts
sdk/ts/src/: client.spec.ts  client.ts  errors.spec.ts  errors.ts  index.spec.ts  index.ts  types.spec.ts  types.ts
tests/acceptance/: README.md  compose.override.yaml  compose.yaml  eslint.config.mts  package-lock.json  package.json  tsconfig.json  vitest.config.ts
tests/acceptance/fixtures/: thermocktat-bacnet-driver.yaml  thermocktat-http-driver.yaml  thermocktat-knx-driver.yaml  thermocktat-modbus-driver.yaml  thermocktat-mqtt-driver.yaml
tests/acceptance/lib/: api.ts
tests/acceptance/setup/: globalSetup.ts
tests/core/device_schema/: test_attribute_schema.py
tests/core/driver_schema/: test_attribute_schema.py
tests/utils/: test_cast_as_bool.py
ui/: eslint.config.js  package-lock.json  package.json  tailwind.config.js
ui/src/: App.jsx  index.css
ui/src/data/: mockData.js  (+1 more)
(+658 files in other folders)
