[project]
name = "gridone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "gridone-core",
]

[tool.uv.sources]
gridone-core = { workspace = true }
gridone-api = { workspace = true }
gridone-storage = { workspace = true }


[tool.uv.workspace]
# Globs or paths to your member projects
members = [
    "packages/*",
    "apps/cli",
    "apps/api_server"
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.3",
    "ty>=0.0.1a25",
]

[tool.ruff]
indent-width = 4
line-length = 88

[tool.ruff.lint]
select = ["ALL"]
ignore = [
   "D",
   "COM812"
]
fixable = ["ALL"]


[tool.ruff.lint.per-file-ignores]
"**/test_*.py" = ["SLF001", "T201", "TID252", "FBT001", "S101", "ANN201","ANN401", "PLR2004", "EM101"]
"apps/cli/*.py" = ["T201", "FBT003", "ERA001"]
"apps/*" = ["INP001"]
