[project]
name = "gridone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "gridone-devices-manager",
]

[tool.uv.sources]
gridone-devices-manager = { workspace = true }
gridone-dto = { workspace = true }
gridone-api = { workspace = true }



[tool.uv.workspace]
# Globs or paths to your member projects
members = [
    "packages/api",
    "packages/devices_manager",
    "apps/cli",
    "apps/api_server",
    "packages/timeseries",
]

[dependency-groups]
dev = [
    "coverage>=7.13.0",
    "docker>=7.1.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.3.0",
    "pytest-httpserver>=1.1.3",
    "ruff>=0.15.1",
    "ty>=0.0.1a25",
]

[tool.ruff]
indent-width = 4
line-length = 88

[tool.ruff.lint]
select = ["ALL"]
ignore = [
   "D",
   "COM812"
]
fixable = ["ALL"]


[tool.ruff.lint.per-file-ignores]
"**/test_*.py" = ["SLF001", "T201", "TID252", "FBT001", "S101", "ANN201","ANN401", "PLR2004", "EM101","INP001", "ANN001"]
"apps/cli/*.py" = ["T201", "FBT003", "ERA001"]
"apps/*" = ["INP001"]

[tool.coverage.run]
source = [
    "apps/api_server",
    "apps/cli",
    "packages/api/src",
    "packages/devices-manager/src",
]
omit = [
    "*/tests/*",
    "*__pycache__*",
]

[tool.pytest.ini_options]
markers = [
    "integration: mark a test as an integration test",
]
