[project]
name = "gridone"
version = "0.109.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "gridone-models",
    "yoyo-migrations>=8.2.0",
    "psycopg2-binary>=2.9.0",
]

[tool.uv.sources]
gridone-devices-manager = { workspace = true }
gridone-api = { workspace = true }
gridone-models  = { workspace = true }
gridone-users = { workspace = true }
gridone-apps = { workspace = true }
gridone-assets = { workspace = true }
gridone-timeseries = { workspace = true }
gridone-automations = { workspace = true }
gridone-commands = { workspace = true }
gridone-migrations = { workspace = true }
gridone-notifications = { workspace = true }



[tool.uv.workspace]
# Globs or paths to your member projects
members = [
    "packages/api",
    "packages/apps",
    "packages/assets",
    "packages/automations",
    "packages/devices_manager",
    "packages/users",
    "apps/cli",
    "apps/api_server",
    "apps/migrations",
    "packages/timeseries",
    "packages/commands",
    "packages/models",
    "packages/notifications",
]

[dependency-groups]
dev = [
    "coverage>=7.13.0",
    "docker>=7.1.0",
    "polars>=1.0.0",
    "pyyaml>=6.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.3.0",
    "pytest-httpserver>=1.1.3",
    "ruff==0.15.5",
    "ty==0.0.22",
]

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "pep621"
tag_format = "v$version"
major_version_zero = true
update_changelog_on_bump = true
pre_bump_hooks = ["uv lock && git add uv.lock"]

[tool.ruff]
indent-width = 4
line-length = 88

[tool.ruff.lint]
select = ["ALL"]
ignore = [
   "D",
   "COM812"
]
fixable = ["ALL"]


[tool.ruff.lint.isort]
known-first-party = ["api", "apps", "assets", "commands", "devices_manager", "models", "notifications", "timeseries", "users"]

[tool.ruff.lint.per-file-ignores]
"**/test_*.py" = ["T201", "TID252", "FBT001", "S101", "S106", "ANN201", "ANN401", "PLR2004", "EM101", "INP001", "ANN001", "S603", "PLW1510", "PLC0415"]
"**/conftest.py" = ["INP001"]
"apps/cli/*.py" = ["T201", "FBT003", "ERA001"]
"apps/*" = ["INP001"]
# telemetry: imports are deliberately lazy so the disabled path never loads the
# OpenTelemetry SDK (zero runtime cost when tracing is off).
"apps/api_server/telemetry.py" = ["PLC0415"]
"**/fixtures/generate.py" = ["T201", "INP001", "ANN201", "PLR2004", "S311", "RUF001", "RUF002", "RUF003"]
"**/fixtures/compute.py" = ["T201", "INP001", "PLR2004", "ANN401", "TRY003", "EM102", "C901", "PLR0911", "PLR0913"]
"**/tests/test_compute.py" = ["INP001", "E402", "E501", "ANN001", "ANN201", "PLR2004", "S101", "SLF001", "ERA001"]
"**/storage/memory/aggregate.py" = ["ANN401", "PLR2004", "C901", "PLR0911", "PLR0912", "PLR0913"]
"**/storage/postgres/aggregate.py" = ["S608"]
# packages/api — permanent: idiomatic FastAPI/pydantic patterns
# TC001/TC002/TC003: pydantic field types and FastAPI annotations must be runtime imports
# FAST002/B008: = Depends(...) is valid FastAPI; Annotated migration is high-risk for style only
# PLR0913: FastAPI DI produces many-arg routes by design
# ARG001 (exception_handlers): FastAPI handler contract requires (request, exc) signature
"packages/api/src/**/routes/**" = ["PLR0913"]
"packages/api/src/api/exception_handlers.py" = ["ARG001"]
# packages/api — pending cleanup (pre-existing violations, enforce rule-by-rule)
"packages/api/src/**" = ["TC001", "TC002", "TC003", "FAST002", "B008", "ARG001", "PLR0913"]
"packages/api/tests/**" = ["TC001", "TC002", "TC003"]
"packages/api/generate_openapi.py" = ["INP001", "T201"]

[tool.coverage.run]
source = [
    "apps/api_server",
    "apps/cli",
    "packages/api/src",
    "packages/automations/src",
    "packages/commands/src",
    "packages/devices-manager/src",
    "packages/notifications/src",
    "packages/timeseries/src",
    "packages/users/src",
    "packages/apps/src",
    "packages/assets/src",
]
omit = [
    "*/tests/*",
    "*__pycache__*",
]

[tool.ty.environment]
extra-paths = ["packages/timeseries/tests/fixtures"]

[tool.pytest.ini_options]
markers = [
    "integration: mark a test as an integration test",
]
