[project]
name = "api-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gridone-api",
    "opentelemetry-exporter-otlp-proto-http>=1.42.1",
    "opentelemetry-instrumentation-fastapi>=0.63b1",
    "opentelemetry-instrumentation-httpx>=0.63b1",
    "opentelemetry-instrumentation-logging>=0.63b1",
    "opentelemetry-sdk>=1.42.1",
    "uvicorn>=0.38.0",
    # uvicorn needs the websockets protocol library to serve the /ws endpoint;
    # we depend on it directly rather than pulling the whole uvicorn[standard]
    # extra so it rides the cached uv sync layer instead of a separate install.
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "fastapi[standard]>=0.123.8",
    "rich>=14.2.0",
]
